# speech_vosk

./: .gitattributes  .gitignore  README.md  pyproject.toml  ruff.toml  speech_300.bat  speech_60.bat
src/: audio_recorder.py  record_speech.py  speech_300.py  speech_60.py  speech_recognizer.py
tests/: conftest.py  test_audio_recorder.py  test_record_speech.py  test_speech_60.py  test_speech_recognizer.py
